--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ flutter:
       linux:
         dartPluginClass: AudioServiceMpris
         fileName: audio_service_mpris.dart
+      aurora:
+        dartPluginClass: AudioServiceMpris
+        fileName: audio_service_mpris.dart
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
